# nv2a-define-collator

./: .gitignore  README.md  pyproject.toml
src/nv2a_define_collator/: generate_nv2a_constants.py
src/nv2a_define_collator/templates/: color_combiner_processors.py.jinja2  generic_processors.py.jinja2  header.py.jinja2  lighting_processors.py.jinja2  nv2a_constants.py.jinja2  shader_processors.py.jinja2  texture_processors.py.jinja2
